<resources>
    <string name="app_name">RedStone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>


    <string name="menu_home">Home</string>
    <string name="menu_aboutpurdue">About Purdue</string>
    <string name="menu_tour">Tour</string>
    <string name="menu_add_tour">Add Tour</string>
    <string name="menu_view_tours">View Tours</string>
    <string name="menu_free_roam">Free Roam</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutLabel">About Purdue</string>

    <!-- Free Roam -->
    <string name="opengl_not_supported">This app requires OpenGL ES 3.0 or later</string>

    <!-- Authentication -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signin">Sign in</string>
    <string name="success_login">Success Sign in</string>
    <string name="failed_login">Failed Sign in</string>
    <string name="signup">Sign up</string>
    <string name="success_signup">Welcome</string>
    <string name="failed_signup">Failed Sign up</string>
    <string name="mypurdue">MyPurdue</string>
    <string name="Blackboard">blackboard</string>
    <string name="X">X</string>
    <string name="aboutinfo">Purdue University is a public research university in West Lafayette, Indiana, and the flagship campus of the Purdue University system.[6] The university was founded in 1869 after Lafayette businessman John Purdue donated land and money to establish a college of science, technology, and agriculture in his name.[7] The first classes were held on September 16, 1874, with six instructors and 39 students.[7]  The main campus in West Lafayette offers more than 200 majors for undergraduates, over 69 masters and doctoral programs, and professional degrees in pharmacy and veterinary medicine. In addition, Purdue has 18 intercollegiate sports teams and more than 900 student organizations. Purdue is a member of the Big Ten Conference and enrolls the second largest student body of any university in Indiana, as well as the fourth largest foreign student population of any university in the United States.</string>
    <string name="purduehome">Purdue Homepage</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="view_tours">View Tours</string>

    <string name="continue_to_sign_up">Continue to Sign Up</string>
    <string name="delete_account">Delete Account</string>

    <!-- Location -->
    <string name="add_location">Add Location</string>
    <string name="finalize_location">Finalize Location</string>
    <string name="user_type">User Type</string>
    <string name="likes">Recived Likes</string>
    <string name="dislikes">Recived Dislikes</string>
    <string name="netlikes">Recieved Net Likes</string>
    <string name="user_likes">User Likes</string>
    <string name="user_dislikes">User Dislikes</string>
    <string name="user_netlikes">User Net Likes</string>

    <!-- Tours -->
    <string name="tour_search_hint">Search tours by name</string>
    <string name="tour_tag_search_hint">Search tours by tag</string>

    <!-- addTour -->
    <string name="back">Back</string>
    <string name="add_newtour">Add NewTour</string>
    <string name="create_tour">Create Tour</string>
    <string name="title">Title</string>
    <string name="create_your_tour">Create Your Tour</string>
    <string name="private_tour">Private Tour</string>
    <string name="private_mode">Private Mode</string>
    <string name="tags">Tags</string>
    <string name="locations">Locations</string>
    <string name="add_tag_to_tour">Add Tag to Tour</string>
    <string name="select_tag">Select a tag...</string>
    <string name="add_location_to_tour">Add Location to Tour</string>
    <string name="select_location">Select a location...</string>
    <string name="search_by_hammer_user">Search by Hammer User</string>

    <!--    Free Roam-->
    <string name="btn_ar">AR</string>
    <string name="btn_map">Map</string>
    <string name="byLikes">Sort by likes instead\nof date</string>
    <string name="hammerOnly">Hammer user\ncomments only</string>

    <!-- Comments -->
    <string name="sort_btn">Sort</string>
    <string name="search_tours_by_location">Search tours by location</string>

    <!-- Admin Page -->
    <string name="tab_text_1">WHAT\'S NEW</string>
    <string name="tab_text_2">AD</string>
    <string name="tab_text_3">OTHERS</string>
    <string name="tab_text_4"></string>
    <string name="title_activity_post_page">PostPageActivity</string>

    <!-- Public Board -->
    <string name="pb_tab_text_1">WALL</string>
    <string name="pb_tab_text_2">AD</string>

    <!-- Scavanger -->
    <string name="save_tour">Create Scavanger Hunt</string>
    <string name="start_scavanger">GO</string>
    <string name="scavanger_name">Scavange Name</string>
    <string name="scavanger_uid">Scavange UID</string>

</resources>
