<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cs407.team15.redstone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutpurdue"
        android:name="com.cs407.team15.redstone.ui.aboutpurdue.AboutActivity"
        android:label="@string/menu_aboutpurdue"
        tools:layout="@layout/fragment_about_purdue" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.cs407.team15.redstone.ui.location.LocationListFragment"
        android:label="Locations"
        tools:layout="@layout/fragment_location_list" />

    <fragment
        android:id="@+id/nav_tour"
        android:name="com.cs407.team15.redstone.ui.tour.TourFragment"
        android:label="@string/menu_tour"
        tools:layout="@layout/fragment_tour" />

    <fragment
        android:id="@id/nav_view_tours"
        android:name="com.cs407.team15.redstone.ui.viewtours.ViewToursFragment"
        android:label="@string/menu_view_tours"
        tools:layout="@layout/fragment_view_tours"
        />

    <fragment
        android:id="@+id/nav_ar"
        android:name="com.cs407.team15.redstone.ui.ar.ARFragment"
        android:label="@string/menu_ar"
        tools:layout="@layout/fragment_ar" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cs407.team15.redstone.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.cs407.team15.redstone.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_location"
        android:name="com.cs407.team15.redstone.ui.location.LocationPage"
        android:label="Location"
        tools:layout="@layout/location_display"
        />
</navigation>