<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/AboutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AboutLabel"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/button_set">

        <Button
            android:id="@+id/mypurdue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypurdue" />

        <Button
            android:id="@+id/bbbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Blackboard" />

        <Button
            android:id="@+id/purduehome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purduehome" />
    </LinearLayout>

    <TextView
        android:id="@+id/aboutparagraph"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/locationlisting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutparagraph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Locations" />

</RelativeLayout>